- added access to kate-config dialog in the command-editor part of the interface watch
- added configuration settings for which types of commands to show in the interface watch
- added a nice startup-dialog instead of creating an emtpy table unconditionally
- limit size of upper-half in the data.frame editor
- added convenience R-library: used to streamline communication with R
- fix against data being synced over and over again

--- Version 0.2.5 - Aug-24-2004 ---
- added simple viewer for R-objects
- added simple browser for objects in the R-workspace
- allow deletion of columns/objects (finally)
- allow editing and using several objects/tables
- added command-line parameter "debug-level"
- interpret command-line parameter "file"
- save and restore size of the main window correctly
- use internal representation of object-tree in the R-workspace
- store meta-information (labels, etc.) as R-attributes
- keep track of whether the windows (watch, output) are open
- new method of access to objects in R: getIntVector
- use some "global" static pointers instead of passing them around (e.g. for the r-interface)
- reorganized sources: now using subdirectories for most components

--- Version 0.2.2 - Aug-15-2004 ---
- added an improved kate syntax-highlighting definition for R
- output-formatting is done in R instead of PHP
- added a formula widget for use in plugins (not entirely finished, yet)
- fixed some small compilation problems
- added spinbox widget for use in plugins
- use coloring for "unsatisfied" plugin widgets instead of the "Problems" display
- added support for wizard-like plugins
- same plugin can be opened several times at once
- use katepart for plugin code view, too

--- Version 0.2.1 - Aug-08-2004 ---
- added "don't show again" setting to initial warning
- added correlation matrix plugin
- ask for R_HOME-setting if not availalbe at startup
- allow direct (read) access of vectors in R
- support for selection of multiple variables at once