@@ -1,14 +1,13 @@
 The following list of TODO-items is NOT complete!
 
 stuff to do before 0.2.6 release
-- streamline object-syncing using smart R-functions
-- set wizard-interface as default
+- streamline object-syncing using smart R-functions (rk.classify)
+- add save-agent
 - pick some from below:
 
 (relatively) small stuff to do soon
 - merge common functionality of RObjectBrowser and RKVarselector into a base of some sort
 - update RKVarselectors on changes in the object-list!
-- plugins-scanning: don't duplicate everything
 - add more plugin-widgets
 - setValue-API for plugin-widgets and copying of values when switching from wizard to dialog-interface
 - improve and use debugging framework
@@ -21,18 +20,18 @@ stuff to do before 0.2.6 release
 	- keep pointer to editor with objects instead of modification information
 	- maybe make objects assume own responsibility for syncing their data
 	- NO, make it much simpler by syncing the data immediately! Delay syncing only during (large) paste operations.
-	- maybe store data directly with objects
+	- maybe store data directly with objects? Probably not.
 	- functions to set double/int/string-vectors directly
+	- remove objects that are no longer in the workspace from the objectlist
 - add XML-parsing helper functions and error-checking
 - create a spinbox, that can really deal with real numbers
-- create DemonDialogs that notify the user what's going on and potentially request further actions, if an action is to be carried out in the
+- create agent-dialogs that notify the user what's going on and potentially request further actions, if an action is to be carried out in the
 	R backend that might potentially fail or require user interaction (asynchronously)
 
 stuff to do before the thing is usable
 - RKWatch
 	- use a cool new RHistory-Widget for the watch
-	- discard RCommand-data that is not needed in the history
-	- access to (command) editor-settings
+	- maybe keep an (optional) log of RCommands
 	- load / save / spawn as separate editor ...
 - add a help-system
 - support for multiple tables/data.frames
